SEVA-5617 fix when scrollbar is always shown

--- a/styles/components/organisms/sidebarMobile.module.scss
+++ b/styles/components/organisms/sidebarMobile.module.scss
@@ -15,7 +15,7 @@
     left: 0;
 
     @media (min-width: 570px) {
-      left: calc((100vw - 570px) / 2);
+      left: calc((100% - 570px) / 2);
     }
   }
 
